<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_basic"
        android:translationZ="5dp"
        app:layout_constraintBottom_toTopOf="@+id/foreground_profile"
        app:layout_constraintEnd_toEndOf="@+id/foreground_profile"
        app:layout_constraintStart_toStartOf="@+id/foreground_profile"
        app:layout_constraintTop_toTopOf="@+id/foreground_profile"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/foreground_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/foreground_profile"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/profile_img"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:fontFamily="@font/s_core_dream4"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_camera"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:backgroundTint="#FF97A7FD"
                android:fontFamily="@font/s_core_dream4"
                android:text="@string/camera"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_gallery"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/background_button"
                android:backgroundTint="#FFFF5C5C"
                android:fontFamily="@font/s_core_dream4"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button_basic"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:backgroundTint="#FFB0B0B0"
                android:fontFamily="@font/s_core_dream4"
                android:text="@string/basic"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:autofillHints="name"
            android:background="@drawable/background_text_log_in"
            android:drawableStart="@drawable/icon_name"
            android:drawablePadding="10dp"
            android:fontFamily="@font/s_core_dream4"
            android:hint="@string/user_name"
            android:textColorHint="#FFB0B0B0"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/error_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="20dp"
            android:text="@string/error_username"
            android:textColor="#FF5C5C"
            android:textSize="15sp"
            android:visibility="gone"
            android:fontFamily="@font/s_core_dream4"/>

        <android.widget.Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/s_core_dream8"
            android:text="@string/setting_profile"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>